src/test/ui/pattern/slice-pattern-const-2.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const-2.rs:28:9
   |
LL |         FOO => (),
   |         ^^^
   |
note: lint level defined here
  --> $DIR/slice-pattern-const-2.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

